--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,8 @@
     "license": "MIT",
     "homepage": "home.html",
     "dependencies": {
+        "angular-websql": "1.0.2",
+        "angular-resource": "1.4.0",
         "angular-route": "1.4.0",
         "angular-material": "0.9.7"
     },
